--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <div class="container-fluid">
-    <app-root></app-root>
+    <app-root>Loading ...</app-root>
   </div>
 
   <!-- Optional JavaScript -->
